[gd_scene load_steps=5 format=3 uid="uid://o5dt5106rohh"]

[ext_resource type="Script" path="res://Scripts/SubComponents/Fields/FilePicker.gd" id="1_siiu8"]
[ext_resource type="Texture2D" uid="uid://t1i3wy037vsu" path="res://Assets/Icons/folder_icon.png" id="2_plad0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxvmx"]
content_margin_left = 5.0
content_margin_right = 31.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784314, 0.0862745, 0.0980392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_nr3ee"]
font_color = Color(0.768627, 0.180392, 0.25098, 1)

[node name="FilePickerLineEdit" type="HBoxContainer"]
offset_right = 204.0
offset_bottom = 86.0
script = ExtResource("1_siiu8")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Label"

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_vxvmx")
structured_text_bidi_override = 2

[node name="FilePickerButton" type="Button" parent="VBox/LineEdit"]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
mouse_default_cursor_shape = 2
icon = ExtResource("2_plad0")
flat = true

[node name="WarnLabel" type="Label" parent="VBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "File path not found!"
label_settings = SubResource("LabelSettings_nr3ee")
autowrap_mode = 2

[connection signal="focus_exited" from="VBox/LineEdit" to="." method="_on_focus_exited"]
[connection signal="text_changed" from="VBox/LineEdit" to="." method="_on_text_changed"]
[connection signal="text_submitted" from="VBox/LineEdit" to="." method="_on_text_submitted"]
[connection signal="pressed" from="VBox/LineEdit/FilePickerButton" to="." method="_on_picker_button_pressed"]
